--- a/apps/backend/api/pyproject.toml
+++ b/apps/backend/api/pyproject.toml
@@ -1,11 +1,14 @@
 [project]
-name = "backend"
+name = "backend-api"
 version = "0.1.0"
 description = "FastAPI backend application"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.115.0",
     "uvicorn[standard]>=0.32.0",
+    "pydantic-settings>=2.0.0",
+    "motor>=3.3.0",
+    "pymongo>=4.6.0",
 ]
 
 [build-system]
@@ -18,4 +21,11 @@ dev-dependencies = [
     "pytest-asyncio>=0.23.0",
     "httpx>=0.27.0",
 ]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+asyncio_mode = "auto"
 
