--- a/package.json
+++ b/package.json
@@ -9,24 +9,55 @@
     "serve": "nx serve"
   },
   "devDependencies": {
+    "@analogjs/vite-plugin-angular": "~2.1.2",
+    "@analogjs/vitest-angular": "~2.1.2",
     "@angular-devkit/build-angular": "^21.0.4",
+    "@angular-devkit/core": "^21.0.4",
+    "@angular-devkit/schematics": "^21.0.4",
+    "@angular/animations": "^21.0.6",
+    "@angular/build": "^21.0.4",
     "@angular/cli": "^21.0.4",
     "@angular/common": "^21.0.6",
     "@angular/compiler": "^21.0.6",
     "@angular/compiler-cli": "^21.0.6",
     "@angular/core": "^21.0.6",
     "@angular/platform-browser": "^21.0.6",
+    "@eslint/js": "^9.8.0",
     "@nx/angular": "^22.3.3",
+    "@nx/devkit": "22.3.3",
     "@nx/eslint": "^22.3.3",
+    "@nx/eslint-plugin": "22.3.3",
     "@nx/jest": "^22.3.3",
     "@nx/js": "^22.3.3",
+    "@nx/playwright": "22.3.3",
+    "@nx/vite": "22.3.3",
+    "@nx/vitest": "22.3.3",
+    "@nx/web": "22.3.3",
     "@nx/workspace": "^22.3.3",
+    "@playwright/test": "^1.36.0",
+    "@schematics/angular": "^21.0.4",
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
+    "@types/node": "20.19.9",
+    "@typescript-eslint/utils": "^8.40.0",
+    "@vitest/coverage-v8": "^4.0.0",
+    "@vitest/ui": "^4.0.8",
+    "angular-eslint": "^21.0.1",
     "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.0.0",
+    "eslint-plugin-playwright": "^1.6.2",
     "jest": "^30.2.0",
     "jest-preset-angular": "^16.0.0",
+    "jsdom": "^27.1.0",
     "ng-packagr": "^21.0.1",
     "nx": "^22.3.3",
+    "prettier": "~3.6.2",
     "ts-jest": "^29.4.6",
-    "typescript": "^5.9.3"
+    "tslib": "^2.3.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.40.0",
+    "vite": "^7.0.0",
+    "vitest": "^4.0.8"
   }
 }
