--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "typescript-eslint": "^8.40.0",
     "vite": "^7.0.0",
     "vitest": "^4.0.8"
+  },
+  "dependencies": {
+    "@angular/router": "^21.0.6"
   }
 }
